fix(truncated-list): spacing

--- a/src/components/TruncatedList/_index.scss
+++ b/src/components/TruncatedList/_index.scss
@@ -9,6 +9,8 @@
 @import '../Component/mixins';
 
 @include security--component($name: truncated-list) {
+  margin: 0;
+
   &__scroller-container {
     height: auto;
   }
